src/sass/_profile_list.scss
.profile-list {
  .profile-list-header {
    display: flex;
    justify-content: space-between;
    margin: $spv--x-small 0 $spv--large 0;

    h1 {
      margin-right: 2rem;
    }

    .search-box {
      max-width: 20rem;
      width: 100%;
    }

    .margin-right {
      margin-right: $sph--large;
    }

    .profiles-disabled {
      visibility: hidden;
    }
  }

  .profile-content {
    padding-bottom: 0;
    padding-top: $spv--large;

    .p-notification--caution {
      background-image: none;
      border: 0;
      margin-bottom: $spv--small;
      margin-top: -$spv--small;
      padding-left: $spv--large;
    }

    .p-notification--positive,
    .p-notification--negative {
      margin-bottom: $spv--large;
    }
  }

  .profile-table {
    margin-bottom: 0;

    th,
    td {
      display: table-cell;
      vertical-align: middle;
    }

    td:last-child {
      padding-bottom: 0;
      padding-right: $sph--large;
    }

    th::before {
      content: "";
      display: inline-block;
      height: 1rem;
    }

    thead,
    tbody {
      display: block;
      overflow-y: auto;
      scrollbar-gutter: stable;
    }

    tbody {
      height: calc(100vh - 323px);
    }

    thead tr,
    tbody tr {
      display: table;
      table-layout: fixed;
      width: 100%;
    }
  }

  .p-pagination__items {
    justify-content: flex-end;
  }

  .p-panel {
    min-height: auto;
  }

  // hide search box on small screens
  @media screen and (max-width: 860px) {
    .search-box {
      display: none;
    }

    .profile-list-header {
      margin-bottom: 0 !important;
    }
  }
}

.l-navigation.is-collapsed + .profile-list {
  @media screen and (min-width: 685px) {
    .search-box {
      display: flex;
    }
  }
}

